[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "word-template-generator"
version = "0.1.0"
description = "Automatically generate and fill in a Word template with parameters and images."
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-docx = "^0.8.11"
google-auth = "^1.34.0"
google-auth-oauthlib = "^0.4.5"
google-auth-httplib2 = "^0.1.0"
google-api-python-client = "^2.21.0"
pdfcrowd = "^5.2.0"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
